# SC-PGO

./: .gitignore  CMakeLists.txt  package.xml
PCD/: odom_poses.txt  optimized_poses.txt  times.txt
PCD/Scans/: 000000.pcd  000001.pcd  000002.pcd  000003.pcd  000004.pcd  000005.pcd  000006.pcd  000007.pcd  000008.pcd  000009.pcd  000010.pcd  000011.pcd  000012.pcd  000013.pcd  000014.pcd  000015.pcd  000016.pcd  000017.pcd  000018.pcd  000019.pcd  000020.pcd  000021.pcd  000022.pcd  000023.pcd  000024.pcd  000025.pcd  000026.pcd  000027.pcd  000028.pcd  000029.pcd  000030.pcd  000031.pcd  000032.pcd  000033.pcd  000034.pcd  000035.pcd  000036.pcd  000037.pcd  000038.pcd  000039.pcd  (+2197 more)
include/scancontext/: Scancontext.cpp
launch/: aloam_fast_lio.launch  fast_lio_launch.py
rviz_cfg/: aloam_velodyne.rviz
src/: kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  laserPosegraphOptimization.cpp  laserPosegraphOptimization_original_GPS.cpp  laserPosegraphOptimization_without_GPS.cpp  scanRegistration.cpp
utils/python/: makeMergedMap.py
