<?xml version="1.0"?>
<package format="3">
  <name>aloam_velodyne</name>
  <version>0.0.0</version>
  <description>
    This is an advanced implementation of LOAM.
    LOAM is described in the following paper:
    J. Zhang and S. Singh. LOAM: Lidar Odometry and Mapping in Real-time.
      Robotics: Science and Systems Conference (RSS). Berkeley, CA, July 2014.
  </description>
  <maintainer email="qintonguav@gmail.com">qintong</maintainer>
  <license>BSD</license>
  <author email="zhangji@cmu.edu">Ji Zhang</author>

  <!-- Use ament_cmake as the build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies. In ROS2, it's common to use <depend> for both build and run time -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <!-- Update rosbag if you are using ROS2's rosbag2 package -->
  <depend>rosbag2</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_msgs</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
